# secops

./: .gitignore  Dockerfile  HOW_TO_USE.md  QUICKSTART.md  README.md  USAGE.md  docker-compose.yml  main.py  pyproject.toml
configs/: .secops-ignore.example  audit.yaml  default.yaml  remediations.yaml
scanner/: __init__.py  audit.py  baseline.py  config.py  remediation.py  rules.py  triage.py  types.py
scanner/reporter/: __init__.py  json_reporter.py  redactor.py  sarif.py  sbom.py  text.py
scanner/scanners/: __init__.py  base.py  cve.py  gosec.py  loader.py  nuclei_scanner.py  secrets.py  semgrep.py
scanner/utils/: __init__.py  filters.py
test_code/: vulnerable.go
tests/: test_comprehensive.py  test_config.py  test_filters.py  test_scanners.py  test_types.py
